# result-py

./: LICENSE  pyproject.toml  readme.md
src/result/: __init__.py
