[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "result-py"
version = "1.0.0"
authors = [
  { name="Jean-Pierre Coetze", email="jeanpierrec19@gmail.com" },
]
description = "An implementation of the Result monad for python"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jpc0/result-py"
"Bug Tracker" = "https://github.com/jpc0/result-py/issues"